--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <header>
     <h1>Rowida Rafiek Mohamed Shabana</h1>
     <p>DevOps Engineer | Flutter Developer</p>
-    <p>Email: <a href="mailto:rowidarafek83@gmail.com">rowidarafek83@gmail.com</a> | Phone: 01004111631 | Mahalla, Egypt</p>
+    <p>Email: <a href="mailto:rowidarafek83@gmail.com">rowidarafek83@gmail.com</a> | Phone: +201004111631 | Mahalla, Egypt</p>
   </header>
   <main>
     <section>
